--- a/docs/deploy.adoc
+++ b/docs/deploy.adoc
@@ -7,7 +7,7 @@ OpenShift is a commercially supported distribution of Kubernetes from Red Hat. T
 
 == Build native image
 
-Let's rebuild our native image with all our changes thus far. Using the Command Palette, select **Build Native Quarkus App** and wait 3-4 minutes for it to finish (this runs `mvn clean package -Pnative` under the hood).
+Let's rebuild our native image with all our changes thus far. Using the Command Palette, select **Build Native Quarkus App** and wait 3-4 minutes for it to finish (this runs `mvn package -Pnative` under the hood).
 
 As you recall, the output of this process is a native Linux binary. Let's deploy it to our cluster.
 
@@ -61,7 +61,7 @@ For this scenario, a project has been created for you called `{{ OPENSHIFT_USER_
 First, create a new _binary_ build within OpenShift
 [source,sh,role="copypaste"]
 ----
-oc new-build quay.io/redhat/ubi-quarkus-native-runner --binary --name=people -l app=people
+oc new-build quay.io/quarkus/ubi-quarkus-native-binary-s2i:19.2.1 --binary --name=people -l app=people
 ----
 
 You should get a `--> Success` message at the end.
